# yaagl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  main.cpp
launcher/: Landing.cpp  Landing.h  Settings.cpp  Settings.h  Splash.cpp  Splash.h  about.h
launcher/data/: Settings.cpp  Settings.h  SettingsData.cpp  SettingsData.h
launcher/data/remote/: RemoteCommon.cpp  RemoteCommon.h
launcher/data/remote/game/: GameDL.cpp  GameDL.h
launcher/data/remote/runners/: Proton.cpp  RunnerCommon.cpp  RunnerCommon.h  Wine.h
launcher/data/runners/: Common.cpp  Common.h  Proton.cpp  Proton.h  RunnerCommon.cpp  RunnerCommon.h  Wine.cpp  Wine.h
launcher/process/: game.cpp  game.h  launch.cpp  launch.h  process.cpp  process.h
launcher/resources/: SASSProcess.cpp  SASSProcess.h  gear_image.h  inject.h  stylesheets.h
launcher/settings/: SettingsTab.cpp  SettingsTab.h  SettingsTabDiscord.cpp  SettingsTabDiscord.h  SettingsTabEnhancements.cpp  SettingsTabEnhancements.h  SettingsTabGame.cpp  SettingsTabGame.h  SettingsTabGeneral.cpp  SettingsTabGeneral.h  SettingsTabMore.cpp  SettingsTabMore.h  SettingsTabRunner.cpp  SettingsTabRunner.h  SettingsTabs.h  SettingsWindow.cpp  SettingsWindow.h
launcher/settings/util/: SettingsButton.cpp  SettingsButton.h  SettingsCheckbox.cpp  SettingsCheckbox.h  SettingsCombo.cpp  SettingsCombo.h  SettingsControl.cpp  SettingsControl.h  SettingsControls.h  SettingsGroup.cpp  SettingsGroup.h  SettingsLabel.cpp  SettingsLabel.h
launcher/tools/libraries/: TODO.md
launcher/ui/: Landing.cpp  Landing.h  Splash.h  widget_baseline.cpp  widget_baseline.h  widget_baseline.ui  widget_section.cpp  widget_section.h  widget_section.ui
launcher/ui/elements/: widget_checkbox.cpp  widget_checkbox.h  widget_checkbox.ui  widget_combo.cpp  widget_combo.h  widget_combo.ui  widget_empty.ui  widget_page.cpp  widget_page.h  widget_page.ui  widget_set_section.cpp  widget_set_section.h  widget_set_section.ui
launcher/ui/pages/: IPage.h  page_dxvks.cpp  page_dxvks.h  page_enhancements.cpp  page_enhancements.h  page_env.cpp  page_env.h  page_general.cpp  page_general.h  page_misc.cpp  page_misc.h  page_shaders.cpp  page_shaders.h  page_wines.cpp  page_wines.h
launcher/ui/qml/: Settings_QML.hpp  Settings_QML.qml  qml_settings.cpp  qml_settings.h
launcher/ui/settings/: SettingsTab.cpp  SettingsTab.h  SettingsTabButtonBack.cpp  SettingsTabButtonBack.h  SettingsTabEnhancements.cpp  SettingsTabEnhancements.h  SettingsTabGame.cpp  SettingsTabGame.h  SettingsTabGeneral.cpp  SettingsTabGeneral.h  SettingsTabMore.cpp  SettingsTabMore.h  SettingsTabRunner.cpp  SettingsTabRunner.h  SettingsTabs.h  SettingsWindow.cpp  SettingsWindow.h
launcher/ui/settings/util/: SettingsButton.cpp  SettingsButton.h  SettingsCheckbox.cpp  SettingsCheckbox.h  SettingsCombo.cpp  SettingsCombo.h  SettingsControl.cpp  SettingsControl.h  SettingsControls.h  SettingsGroup.cpp  SettingsGroup.h  SettingsLabel.cpp  SettingsLabel.h
launcher/util/: Constants.h  Locales.h
